--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -11,9 +11,126 @@
     height: 100vh;
     width: 80px;
     background: #001429;
-    padding: 0.4rem 0.8rem;
-    transition: all 0.5s ease;
+    padding: 0.9rem 0.8rem;
+    transition: width 0.5s ease;
 }
 
 .sidebar.open ~ .main-content{
+    left: 250px;
+    color: red;
+    width: calc(100% - 300px);
 }
+
+.sidebar.open {
+    width: 300px;
+}
+
+.sidebar #btn {
+    position: absolute;
+    color:#fff;
+    top: .8rem;
+    left: 50%;
+    font-size: 1.2rem;
+    line-height: 50px;
+    transform: translateX(-50%);
+    cursor: pointer;
+    transition: left 0.5s ease;
+}
+
+.sidebar.open #btn{
+    margin-top: 5px;
+    left: 90%;
+}
+
+.sidebar .top .logo {
+    color: #fff;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    pointer-events: none;
+    opacity: 0;
+    transition: all 0.5s ease;
+ }
+.sidebar.open .top .logo {
+    opacity: 1; 
+ }
+
+ .top .logo img {
+    margin-right: 10px;
+    margin-left: 10px;
+ }
+
+
+ .sidebar ul li{
+    position: relative;
+    list-style-type: none;
+    height: 50px;
+    width: 90%;
+    margin: 0.8rem 0.4rem;
+    line-height: 50px;
+    transition: all 0.5s ease;
+    }
+    
+.sidebar ul li .nav-link{
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius:0.8rem;
+}
+
+.sidebar ul li .nav-link span{
+    color: #ffffff;
+    margin-bottom: 9px;
+}
+
+
+
+.sidebar ul li .nav-link .icon {
+    min-width: 50px;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    transition: all 0.3s ease;
+}
+
+.sidebar .nav-item {
+    display: inline-block; /* Ensure it takes space even when hidden */
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.sidebar.open .nav-item {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0.s; /* Delay the text appearance */
+}
+
+.sidebar ul li .nav-link {
+    display: flex;
+    align-items: center;
+    padding-top:7px;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 0.8rem;
+    height: 50px;
+    margin-left: -5px;
+}
+
+.sidebar ul li .icon {
+    min-width: 50px; /* Fixed width for the icon area */
+    text-align: center;
+    height: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+  
+
+}
+
+.sidebar ul li .nav-link:hover {
+    background-color:#1990FE;
+}
+
+
