--- a/src/assets/css/topcontainer.css
+++ b/src/assets/css/topcontainer.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 400px;
+    height: 100%;
+    min-height: 477px;
     width : 450px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -14,8 +15,36 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 400px;
     margin: 20px;
     gap: 50px;
 }
 
+.list-item{
+    padding: 20px;
+    width : 100%;
+    justify-content: space-between;
+    border: 1px solid rgb(216, 216, 216);
+    padding-right: 30px;
+}
+
+.green{
+    color: #77B900;
+}
+
+.red{
+    color: #E8464C;
+}
+
+.price{
+    align-items: end;
+}
+
+.title{
+    font-size: 24px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.stock-name{
+    margin-left: 5px;
+}
