--- a/src/assets/css/topcontainer.css
+++ b/src/assets/css/topcontainer.css
@@ -3,27 +3,47 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
-    min-height: 477px;
+    min-height: 472px;
     width : 450px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 24px 48px 0 rgba(0,0,0,0.16);
 }
 
+.page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width : 100%;
+    
+}
 .top-containers{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 20px;
     gap: 50px;
+    width: 95%;
 }
+
+.list-container{
+    width: 450px;    
+}
+
+.test{
+    width:450px ;
+}
+
 
 .list-item{
     padding: 20px;
     width : 100%;
     justify-content: space-between;
-    border: 1px solid rgb(216, 216, 216);
+    border-bottom: 1px solid rgb(216, 216, 216);
+    border-spacing: 4px;
     padding-right: 30px;
 }
 
@@ -47,4 +67,15 @@
 
 .stock-name{
     margin-left: 5px;
+}
+
+.symbol{
+    color: #838383;
+}
+
+.stockList{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -100px;
 }
