Added search styles

--- a/src/assets/css/topnav.css
+++ b/src/assets/css/topnav.css
@@ -22,12 +22,19 @@
 }
 
 .search input{
+    box-sizing: border-box;
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
     border-color: rgb(216, 216, 216);
     width: 360px;
+    background-image: url("../images/images.png");
+    background-repeat: no-repeat;
+    background-position: 10px 10px;
+    background-size: 20px;
+    padding: 12px 20px 12px 40px;
 }
+
 
 .search input::placeholder{
     font-size: 14px;
