--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -158,6 +158,8 @@
 .topbar-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
     margin: 10px 20px ;
   }
