--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -179,13 +179,14 @@
   }
 
   .stock-list-top-bar{
+    width: 1480px;
     display: flex;
     overflow-x: scroll;
     scrollbar-width: none;
-    width: 100%;
     border: 1px solid rgb(216, 216, 216);
     padding: 20px;
     border-radius: 20px;
+    align-self:start;
   }
 
   .stock-list-top-bar::-webkit-scrollbar {
@@ -195,4 +196,10 @@
 .viewchart{
     padding: 10px;
     margin: 10px 20px ;
+    border-radius: 10px;
+    gap: 30px;
+}
+
+.highcharts-container{
+    border-radius: 20px;
 }
