Added styles for stock list logos

--- a/src/assets/css/stockslist.css
+++ b/src/assets/css/stockslist.css
@@ -26,6 +26,10 @@
 .logo-list{
     align-items: center;
 }
+.logo-list img{
+    border-radius: 50px;
+    margin: 5px;
+}
 
 .highcharts-credits{
     display: none;
