--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,7 +1,6 @@
 /* Container for the login page */
 .login-container {
     display: flex;
-    height: 100vh;
     font-family: 'Arial', sans-serif;
   }
   
@@ -14,18 +13,19 @@
   
   .login-image img {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
   }
   
   /* Text inside the image */
-  .login-image-text {
+  .login-image-text{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 20%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     color: white;
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: bold;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
