--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -34,11 +34,12 @@
   }
   .login-image-text p{
     font-size: medium;
-    font-weight: 100;
+    font-weight: 300;
     padding: 20px;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.7);
     border-radius: 50px;
-    box-shadow: 5px 20px 20px 5px rgb(203, 203, 203,0.5) inset;
+    background: rgba(255, 255, 255, 0.3);
+    margin: 10px;
   }
   
   /* Right side with the login form */
@@ -48,7 +49,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 40px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -59,7 +59,7 @@
     color: #333;
   }
   
-  .form-group {
+  .input {
     width: 100%;
     max-width: 400px;
     margin-bottom: 20px;
@@ -73,25 +73,26 @@
     font-size: 1.1rem;
   }
   
-  .form-group input {
-    width: 100%;
+  input {
+    width: 500px;
     padding: 12px 15px;
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
     transition: border-color 0.3s, box-shadow 0.3s;
+    margin: 10px 0px;
   }
   
-  .form-group input:focus {
+  input:focus {
     border-color: #007bff;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
     outline: none;
   }
   
   button[type="submit"] {
-    width: 100%;
-    max-width: 400px;
+    width: 500px;
+    max-width: 500px;
     padding: 12px;
     font-size: 1.2rem;
     color: #fff;
