--- a/src/assets/css/stockpage.css
+++ b/src/assets/css/stockpage.css
@@ -27,8 +27,19 @@
     font-size: 16px;
 }
 
-.sell{
+#sentiment{
     font-size: 20px;
     color: #FE3F3F;
     margin-top: -20px;
+}
+.red{
+    color: #FE3F3F;
+}
+
+.green {
+    color: #77B900;
+}
+
+.yellow{
+    color: #FFC700;
 }
