--- a/src/assets/css/stockpage.css
+++ b/src/assets/css/stockpage.css
@@ -44,3 +44,12 @@
 .yellow{
     color: #FFC700;
 }
+
+.news{
+    display: block;
+    width: 500px;
+    height: 500px;
+    background: white;
+    border-radius: 20px;
+    padding: 15px;
+}
