--- a/src/assets/css/stockpage.css
+++ b/src/assets/css/stockpage.css
@@ -47,8 +47,15 @@
 
 .news{
     display: block;
-    width: 500px;
+    width: 400px;
     height: 500px;
+    background: white;
+    border-radius: 20px;
+    padding: 15px;
+}
+
+.ml-prediction{
+    width: 1030px;
     background: white;
     border-radius: 20px;
     padding: 15px;
