--- a/src/assets/css/stockslist.css
+++ b/src/assets/css/stockslist.css
@@ -10,6 +10,7 @@
     gap: 0px;
     padding: 0 20px;
     justify-content: space-between;
+    cursor: pointer;
 }
 .apexcharts-yaxis-label{
     display: none;
