--- a/src/assets/css/topnav.css
+++ b/src/assets/css/topnav.css
@@ -7,7 +7,20 @@
     padding-left: 10px;
     padding-right: 30px;
     border-bottom: 1px solid rgb(216, 216, 216);
-  }
+}
+
+.main-bar{
+    position: relative;
+    transition: all 0.5s ease;
+    background-color: #F5F7F9;
+    left: 300px;
+    width: calc(100% - 300px);
+}
+
+.sidebar.open .main-ba{
+    left: 300px;
+    width: calc(100% - 300px);
+}
 
 .topnav img {
     width: 40px;
