--- a/src/assets/css/topcontainer.css
+++ b/src/assets/css/topcontainer.css
@@ -96,3 +96,16 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* For screens smaller than 576px (Mobile devices) */
+@media (max-width: 576px) {
+    .top-containers {
+        flex-direction: column;
+        gap: 20px;
+        margin: 10px;
+        margin-left: 0px;
+        width: 90%;
+        flex-wrap: nowrap;
+    }
+
+    
