--- a/src/assets/css/topnav.css
+++ b/src/assets/css/topnav.css
@@ -11,14 +11,14 @@
 .top-nav.sidebar-open .main-bar{
     left: 300px;
     width: calc(100% - 300px);
-    transition: left 0.3s ease, width 0.3s ease;
+    transition: left 0.5s ease, width 0.5s;
   }
   
   /* Styles when the sidebar is closed */
   .top-nav.sidebar-closed .main-bar{
     left: 80px;
     width: calc(100% - 80px);
-    transition: left 0.3s ease, width 0.3s ease;
+    transition: left 0.5s ease, width 0.5s ease;
   }
 
 .main-bar{
